# flightconverter

./: .gitignore  CMakeLists.txt  README.md  flightconverter.cpp  flightconverter.h  flightplan.cpp  flightplan.h  main.cpp  msfsformat.cpp  msfsformat.h  utils.cpp  xplanefmsformat.cpp  xplanefmsformat.h
src/: flightconverter.cpp  flightconverter.h  flightplan.cpp  flightplan.h  main.cpp  utils.cpp  utils.h
src/commands/: circuit.cpp  circuit.h  civa.cpp  civa.h  command.h  load.cpp  load.h  simbrief.cpp  simbrief.h  simplify.cpp  simplify.h  split.cpp  split.h  update.cpp  update.h  write.cpp  write.h
src/formats/: fileformat.cpp  fileformat.h  msfsiniformat.cpp  msfsiniformat.h  simbriefjson.cpp  simbriefjson.h  xplanefmsformat.cpp  xplanefmsformat.h
